--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "test/**/*.ts",
+    "custom-chai.d.ts",  // Add this line
+    // ... other included files or directories
+  ]
 }
