--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
+    "autoprefixer": "^10.4.20",
     "framer-motion-3d": "^11.9.0",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.13",
     "three": "^0.169.0",
     "three-stdlib": "^2.33.0"
   }
