inited cypress & deleted console.log

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,8 @@ node_modules
 /coverage
 /coverage.json
 
+# Frontend build
+/dist
+
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
