--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "modules": true,
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
+    "start": "vite --strictPort --host --port=4563",
     "test": "npx hardhat test $(find test -name \"*.test.ts\")",
-    "compile": "npx hardhat compile",
-    "coverage": "npx hardhat coverage"
+    "test:cy": "start-test http://localhost:4563 'cypress run'",
+    "test:cy:open": "server-test http://localhost:4563 'cypress open'",
+
+    "hh:compile": "npx hardhat compile",
+    "hh:coverage": "npx hardhat coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "@cucumber/cucumber": "^11.0.1",
+    "@cypress/vite-dev-server": "^5.2.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.5",
@@ -21,6 +30,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.10",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.19",
@@ -29,11 +39,15 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.169.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "chai": "^4.5.0",
+    "cucumber": "^6.0.7",
+    "cypress": "^13.15.0",
     "ethers": "^6.13.2",
     "hardhat": "^2.22.10",
     "hardhat-gas-reporter": "^1.0.10",
     "solidity-coverage": "^0.8.13",
+    "start-server-and-test": "^2.0.8",
     "tailwind": "^4.0.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
