--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "vite --strictPort --host --port=4563",
     "test": "npx hardhat test $(find test -name \"*.test.ts\")",
     "test:cy": "start-test http://localhost:4563 'cypress run'",
-    "test:cy:open": "server-test http://localhost:4563 'cypress open'",
-
+    "test:cy:open": "server-test http://localhost:4563 'CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open'",
+    "test:sy:run": "server-test http://localhost:4563 \"env-cmd -f .env npx synpress run -cf cypress.config.ts supportFile='test/cypress/support/e2e.ts'\"",
     "hh:compile": "npx hardhat compile",
     "hh:coverage": "npx hardhat coverage"
   },
@@ -31,6 +31,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.10",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@synthetixio/synpress": "^3.7.3",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.19",
@@ -40,15 +41,20 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "autoprefixer": "^10.4.20",
     "chai": "^4.5.0",
     "cucumber": "^6.0.7",
     "cypress": "^13.15.0",
+    "env-cmd": "^10.1.0",
     "ethers": "^6.13.2",
     "hardhat": "^2.22.10",
     "hardhat-gas-reporter": "^1.0.10",
+    "postcss": "^8.4.47",
     "solidity-coverage": "^0.8.13",
     "start-server-and-test": "^2.0.8",
     "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.13",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
@@ -58,13 +64,16 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
-    "autoprefixer": "^10.4.20",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@tanstack/react-query": "^5.59.0",
+    "@wagmi/core": "^2.13.8",
     "framer-motion-3d": "^11.9.0",
-    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.13",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "three": "^0.169.0",
-    "three-stdlib": "^2.33.0"
+    "three-stdlib": "^2.33.0",
+    "wagmi": "^2.12.17"
   }
 }
