--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,34 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
+    "baseUrl": ".",
     "target": "es2020",
-    "module": "commonjs",
+    "module": "esnext",
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "types": ["cypress"],
+    "types": [
+      "cypress",
+      "@synthetixio/synpress/support"
+    ],
     "paths": {
-      "@badeball/cypress-cucumber-preprocessor/*": ["./node_modules/@badeball/cypress-cucumber-preprocessor/dist/subpath-entrypoints/*"]
+      "@badeball/cypress-cucumber-preprocessor/*": ["./node_modules/@badeball/cypress-cucumber-preprocessor/dist/subpath-entrypoints/*"],
+      "@pages/*": ["src/front/pages/*"],
+      "@widgets/*": ["src/front/widgets/*"],
+      "@features/*": ["src/front/features/*"],
+      "@entities/*": ["src/front/entities/*"],
+      "@shared/*": ["src/front/shared/*"],
     }
   },
   "include": [
+    "./scripts",
     "test/**/*.ts",
-    "custom-chai.d.ts",  // Add this line
+    "src/**/*.ts",
+    "custom-chai.d.ts",
+    "./typechain-types",
     // ... other included files or directories
   ]
 }
