--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "modules": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "start": "vite --strictPort --host --port=4563",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "npx hardhat test $(find test -name \"*.test.ts\")",
     "test:cy": "start-test http://localhost:4563 'cypress run'",
     "test:cy:open": "server-test http://localhost:4563 'CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open'",
@@ -21,8 +24,11 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@cucumber/cucumber": "^11.0.1",
     "@cypress/vite-dev-server": "^5.2.0",
+    "@eslint/js": "^9.12.0",
+    "@feature-sliced/eslint-config": "^0.1.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.5",
@@ -47,7 +53,12 @@
     "cucumber": "^6.0.7",
     "cypress": "^13.15.0",
     "env-cmd": "^10.1.0",
+    "eslint": "^9.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "ethers": "^6.13.2",
+    "globals": "^15.11.0",
     "hardhat": "^2.22.10",
     "hardhat-gas-reporter": "^1.0.10",
     "postcss": "^8.4.47",
@@ -59,6 +70,7 @@
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.8.1",
     "vite": "^5.4.8"
   },
   "dependencies": {
