monorepo config | separated hardhad

--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "start": "vite --strictPort --host --port=4563",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "npx hardhat test $(find test -name \"*.test.ts\")",
     "test:cy": "start-test http://localhost:4563 'cypress run'",
     "test:cy:open": "server-test http://localhost:4563 'CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open'",
-    "test:sy:run": "server-test http://localhost:4563 \"env-cmd -f .env npx synpress run -cf cypress.config.ts supportFile='test/cypress/support/e2e.ts'\"",
-    "hh:compile": "npx hardhat compile",
-    "hh:coverage": "npx hardhat coverage"
+    "test:sy:run": "server-test http://localhost:4563 \"env-cmd -f .env npx synpress run -cf cypress.config.ts supportFile='test/cypress/support/e2e.ts'\""
   },
   "keywords": [],
   "author": "",
@@ -29,17 +26,9 @@
     "@cypress/vite-dev-server": "^5.2.0",
     "@eslint/js": "^9.12.0",
     "@feature-sliced/eslint-config": "^0.1.1",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomicfoundation/hardhat-ignition": "^0.15.5",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.10",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@synthetixio/synpress": "^3.7.3",
     "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.19",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.3",
@@ -59,8 +48,6 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "ethers": "^6.13.2",
     "globals": "^15.11.0",
-    "hardhat": "^2.22.10",
-    "hardhat-gas-reporter": "^1.0.10",
     "postcss": "^8.4.47",
     "solidity-coverage": "^0.8.13",
     "start-server-and-test": "^2.0.8",
