move to monorepo structure

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ node_modules
 #IDE
 .idea
 
-# Hardhat files
-/cache
-/artifacts
 
 # cypress
 /cypress
@@ -24,3 +21,5 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+/.vite
