--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -2,16 +2,19 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "allowJs": true,
+    "checkJs": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".", // Ensure this is set
   },
   "include": [
     "test/**/*.ts",
-    "hardhead/custom-chai.d.ts"
-    // Add this line
-    // ... other included files or directories
+    "hardhead/custom-chai.d.ts",
   ]
 }
